Changed themes to be fully Pixie-compatible

--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -1,15 +1,15 @@
 {
   "charging": "Ładowanie...",
-  "rebooting": "Restartowanie...",
-  "shuttingDown": "Zamykanie...",
   "menu": {
     "explore": "Gry",
-    "favourites": "Ulubione",
+    "collections": "Kolekcje",
     "history": "Historia",
     "applications": "Aplikacje",
     "information": "Informacje",
     "configuration": "Konfiguracja",
     "reboot": "Restartuj",
     "shutdown": "Zamknij"
-  }
+  },
+  "rebooting": "Restartowanie...",
+  "shuttingDown": "Zamykanie..."
 }
