--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,15 +1,15 @@
 {
   "charging": "Charging...",
-  "rebooting": "Rebooting...",
-  "shuttingDown": "Shutting Down...",
   "menu": {
     "explore": "Games",
-    "favourites": "Favourites",
+    "collections": "Collections",
     "history": "History",
     "applications": "Applications",
     "information": "Information",
     "configuration": "Configuration",
     "reboot": "Reboot",
     "shutdown": "Shutdown"
-  }
+  },
+  "rebooting": "Rebooting...",
+  "shuttingDown": "Shutting Down..."
 }
