Start of completely new version of the theme

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,7 +4,7 @@
     "explore": "Content",
     "collections": "Collections",
     "history": "History",
-    "applications": "Applications",
+    "applications": "Apps",
     "information": "Information",
     "configuration": "Settings",
     "reboot": "Restart",
